@startuml Prontuário Medico

class Pessoa{
-nome: String 
-telefone: String
-email: String
-cpf: String
--
+cadastrar()
+atualizar()
+excluir()
}

class Paciente extends Pessoa{
    -planoSaude: String
    --
    +vizualizarHistorico()
    +agendarConsulta()
}

class Medico extends Pessoa{
    -especialidade: String
    --
    +registrarEvolucao()
    +vizualizarResultadosExames()
    +solicitarMedicamento()
    +solicitarExame()
}

class Consulta{
    -paciente: Paciente
    -medico: Medico
    -dataHora: LocalDateTime
    -status: String
    --
    +agendarConsulta()
    +cancelarConsulta()
    +confirmarConsulta()
    +alterarHorario()
}

class Evolucao{
    -paciente: Paciente
    -medico: Medico
    -dataEvolucao: LocalDateTime
    -descricao: String
    --
    +adicionarNota()
    +editarNota()
    +excluirNota()
    +vizualizarHistorico()
    +transformarEmPDF()
}

class Laboratorio{
    -nomeLaboratorio: String
    -endereco: String
    --
    +cadastrarAmostra()
    +enviarResultado()
    +comunicarErro()
}

class Exame{
    -paciente: Paciente
    -laboratorio: Laboratorio
    -tipo String
    -resultado: String
    --
    +registrarResultado()
    +vizualizarResultado()
    +enviarParaMedico()
}

class Farmacia{
    -paciente: Paciente
    -nomeFarmacia: String
    -endereco: String
    --
    +receberSolicitacao()
    +confirmarRecebimento()
    +cancelarPedido()
    +atualizarEstoque()
    +consultarEstoque()
}

class SistemaPesquisa{
    -medico: Medico
    -paciente: Paciente
    -termoBusca: String
    -filtro: String
    --
    +buscarPaciente()
    +buscarMedico()
    +buscarConsulta()
    +buscarExame()
}

class ControleAcesso{
    -pessoa: Pessoa
    -usuario: String
    -nivelAcesso: String
    --
    +autenticar()
    +criarUsuario()
    +excluirUsuario()
}



Paciente *--> Consulta
Medico *--> Consulta
Paciente *--> Evolucao
Medico *--> Evolucao
Paciente *--> Exame
Laboratorio *--> Exame
Paciente o--> Farmacia
Medico *--> Exame
Medico *--> SistemaPesquisa
Paciente *--> SistemaPesquisa
Pessoa *--> ControleAcesso
@enduml